--- a/ITUniversity.Tasks.Core/ITUniversity.Tasks.Core.csproj
+++ b/ITUniversity.Tasks.Core/ITUniversity.Tasks.Core.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ITUniversity\ITUniversity.csproj" />
+    <ProjectReference Include="..\Zero\ITUniversity\ITUniversity.csproj" />
   </ItemGroup>
 
 </Project>
