--- a/Zero/ITUniversity.AspNetCore/ITUniversity.AspNetCore.csproj
+++ b/Zero/ITUniversity.AspNetCore/ITUniversity.AspNetCore.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>ITUniversity</RootNamespace>
+    <ApplicationIcon />
     <OutputType>Library</OutputType>
+    <StartupObject />
+    <RootNamespace>ITUniversity</RootNamespace>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
