--- a/ITUniversity.Task.NHibernate/ITUniversity.Tasks.NHibernate.csproj
+++ b/ITUniversity.Task.NHibernate/ITUniversity.Tasks.NHibernate.csproj
@@ -1,15 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Services\Dtos\**" />
-    <EmbeddedResource Remove="Services\Dtos\**" />
-    <None Remove="Services\Dtos\**" />
+    <PackageReference Include="NHibernate" Version="5.2.7"></PackageReference>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1"></PackageReference>
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\ITUniversity.Tasks.Core\ITUniversity.Tasks.Core.csproj" />
   </ItemGroup>
