--- a/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
+++ b/ITUniversity.Tasks.Web/ITUniversity.Tasks.Web.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,11 +11,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" />
+    <PackageReference Include="NHibernate" Version="5.2.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ITUniversity.AspNetCore\ITUniversity.AspNetCore.csproj" />
-    <ProjectReference Include="..\ITUniversity.Tasks.Application\ITUniversity.Tasks.Application.csproj" />
+    <ProjectReference Include="..\ITUniversity.Task.NHibernate\ITUniversity.Tasks.NHibernate.csproj" />
+    <ProjectReference Include="..\ITUniversity.Tasks.API\ITUniversity.Tasks.API.csproj" />
+    <ProjectReference Include="..\Zero\ITUniversity.AspNetCore\ITUniversity.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
